--- a/css/detail.css
+++ b/css/detail.css
@@ -67,7 +67,7 @@ border-spacing: 0;
 .header{
     list-style: none;
     max-width: 100%;
-    height: 90px;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -301,7 +301,7 @@ li span{
     display: flex;
     justify-content: space-between;
     width: 236px;
-    height: 44px;
+    height: auto;
     padding: 10px;
 }
 
@@ -350,6 +350,7 @@ li span{
     height: 375px;
     background-size: cover;
     background-position: center;
+    margin-right: 0px;
 }
 
 .banner-content{
@@ -363,6 +364,10 @@ li span{
 .banner-content ul{
     margin-top: 0px;
     margin-bottom: 0px;
+}
+
+.tag{
+    margin-top: 10px;
 }
 
 .content{
