--- a/css/detail.css
+++ b/css/detail.css
@@ -280,11 +280,9 @@ li span{
     max-width: 1920px;
     padding-top: 80px;
     padding-bottom: 80px;
-    padding-left: 312px;
-    padding-right: 312px;
     background: #FBFBFB;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border-top: solid 1px #6C757D;
     margin-top: 80px;
@@ -302,7 +300,7 @@ li span{
     justify-content: space-between;
     width: 236px;
     height: auto;
-    padding: 10px;
+    gap: 10px;
 }
 
 .footer a{
