--- a/css/blog.css
+++ b/css/blog.css
@@ -53,25 +53,25 @@ border-spacing: 0;
     box-sizing: border-box;
 }
 
-.wrapper{
-    max-width: 1920px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-family: "Noto Sans TC";
-    background-color: #FBFBFB;
+body{
+    line-height: 150%;
+    font-family: "Noto Sans TC", serif;
+    display: block;
+}
+
+a{
+    text-decoration: none;
+    display: inline-block;
 }
 
 .header{
     list-style: none;
-    max-width: 100%;
-    height: 90px;
+    max-width: 1920px;
+    margin: 0 auto;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 80px;
-    padding-right: 80px;
     padding-top: 24px;
     padding-bottom: 24px;
     gap: 40px;
@@ -81,7 +81,6 @@ border-spacing: 0;
 }
 
 .header a{
-    text-decoration: none;
     color: black;
 }
 
@@ -92,6 +91,8 @@ border-spacing: 0;
 .hero{
     display: flex;
     justify-content: center;
+    max-width: 1920px;
+    margin: 0 auto;
 }
 
 .hero-img{
@@ -110,29 +111,26 @@ border-spacing: 0;
     height: auto;
     background: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/Hero%20Section2.png?raw=true");
     background-size: cover;
+    display: flex;
+    align-items: center;
+    padding-left: 80px;
 }
 
 h1{
     font-size: 120px;
     font-weight: 900;
-    font-family: "Noto Sans TC";
-}
-
-.hero-content ul{
-    margin-left: 80px;
-    margin-top: 300px;
+    font-family: "Noto Sans TC", serif;
+    margin-bottom: 63px;
 }
 
 .hero-content h1{
     color: #0027D5;
-    line-height: 150%;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
 }
 .hero-content h3{
     color: #0027D5;
     font-size: 28px;
     font-weight: 700;
-    line-height: 150%;
 }
 
 .banner{
@@ -188,7 +186,7 @@ time{
     font-size: 16px;
     line-height: 150%;
     font-weight: 500;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
 }
 
 .tag{
@@ -202,20 +200,20 @@ h3{
     font-size: 24px;
     line-height: 150%;
     font-weight: 500;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
 }
 
 .tag span{
-margin-left: 8px;
-padding-left: 12px;
-padding-right: 12px;
-padding-top: 6px;
-padding-bottom: 6px;
-background: #0027D5; 
-color: white;
-font-size: 16px;
-border-radius: 40px;
-font-family: "Noto Sans TC";
+    margin-left: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    background: #0027D5; 
+    color: white;
+    font-size: 16px;
+    border-radius: 40px;
+    font-family: "Noto Sans TC", serif;
 }
 
 h2{
@@ -223,61 +221,69 @@ h2{
     font-weight: 700;
     line-height: 150%;
     margin-top: 8px;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
   }
 
 p{
-  display: -webkit-box;
-  -webkit-box-orient: vertical; 
-  overflow:hidden;
-  -webkit-line-clamp: 2;
-  line-height: 150%;
-  margin-top: 8px;
-  font-size: 16px;
-  color: #4B4B4B;
-  margin-bottom: 24px;
-  font-family: "Noto Sans TC";
+    display: -webkit-box;
+    -webkit-box-orient: vertical; 
+    overflow:hidden;
+    -webkit-line-clamp: 2;
+    line-height: 150%;
+    margin-top: 8px;
+    font-size: 16px;
+    color: #4B4B4B;
+    margin-bottom: 24px;
+    font-family: "Noto Sans TC", serif;
 }
 
-.blog a{
-  text-decoration: none;
-  font-size: 16px;
-  line-height:150%;
-  color: #4B4B4B;
-  background: white;
-  border: solid 1px #4B4B4B;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
-  border-radius: 40px;
-  font-family: "Noto Sans TC";
-}
-
-.blog a:hover{
-    color: white;
-    background: #0027D5;
+.wrapper{
+    max-width: 1320px;
+    margin: 0 auto;
+    font-family: "Noto Sans TC", serif;
+    padding: 0 12px;
+    background: #FBFBFB;
 }
 
 .blog{
     display: flex;
     flex-wrap: wrap;
     max-width: 1920px;
-    justify-content: space-between;
     margin: 0 auto;
     background: #FBFBFB;
-    padding-right: 312px;
-    padding-left: 312px;
+    gap: 24px;
 }
 
-.blog li ul{
-    width: 416px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+.card {
+    max-width: calc((100% - 48px) / 3);
+    height: auto;
+    border: none;
+    display: block;
+    background: #FBFBFB;
 }
 
-.i{
-    width: 416px;
+.blog img{
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 16px;
+}
+
+.card a{
+    font-size: 16px;
+    color: #4B4B4B;
+    background: white;
+    border: solid 1px #4B4B4B;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 40px;
+    font-family: "Noto Sans TC", serif;
+}
+
+.blog a:hover{
+    color: white;
+    background: #0027D5;
 }
   
 .search{
@@ -286,13 +292,12 @@ p{
     padding-top: 80px;
     padding-bottom: 40px;
     background: #FBFBFB;
-    padding-left: 312px;
 }
 
 .outline{
     border: solid 1px #4B4B4B;  
     border-radius: 40px;
-    width: 416px;
+    max-width: 416px;
     padding-top: 16px;
     padding-bottom: 16px;
     background-color: white;
@@ -314,7 +319,7 @@ p{
     font-weight: 500;
     color: #4B4B4B;
     width: 316px;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
 }
 
 .page{
@@ -345,7 +350,7 @@ p{
     text-align: center;
     text-decoration: none;
     color: #4B4B4B;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
     font-size: 16px;
     font-weight: 500;
     border-radius: 40px;
@@ -372,23 +377,26 @@ p{
     border-top: solid 1px #6C757D;
 }
 
-.footer p{
+.footer a{
     font-size: 32px;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
     font-weight: 500;
     color: black;
+}
+
+.footer a:hover{
+    color: #0027D5;
 }
 
 .social{
     display: flex;
     justify-content: space-between;
-    width: 236px;
-    height: 44px;
+    gap: 24px;
+    height: auto;
     padding: 10px;
 }
 
-.footer a{
-    text-decoration: none;
+.social a{
     color: #0027D5;
     font-weight: 500;
     display: block;
@@ -404,11 +412,11 @@ p{
     background: white;
 }
 
-.copyright p{
+.copyright {
     font-size: 16px;
     color: black;
     text-align: center;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
     font-weight: 500;
 }
 
@@ -421,18 +429,18 @@ p{
 }
 
 .header{
-    width: 100%; 
+    max-width: 375px; 
     height: auto;
 }
 
 .hero{
-    max-width: 100%;
+    max-width: 375px;
     height: auto;
     display: block;
 }
 
 .hero-img{
-    max-width: 100%;
+    max-width: 375px;
     height: 375px;
     background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/mobile/index/Hero%20Section.png?raw=true");
     background-size: cover;
@@ -441,7 +449,7 @@ p{
 }
 
 .hero-content{
-    max-width: 100%;
+    max-width: 375px;
     height: auto;
     padding-left: 24px;
     padding-top:24px;
