--- a/css/detail.css
+++ b/css/detail.css
@@ -54,14 +54,23 @@ border-spacing: 0;
     box-sizing: border-box;
 }
 
+body{
+    line-height: 150%;
+    font-family: "Noto Sans TC", serif;
+    word-wrap: break-word;
+    hyphens: auto;
+}
+
+a{
+    text-decoration: none;
+    display: inline-block;
+}
+
 .wrapper{
-    max-width: 1920px;
+    max-width: 660px;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-family: "Noto Sans TC";
-    background-color: #FBFBFB;
+    font-family: "Noto Sans TC", serif;
+    background: #FBFBFB;
 }
 
 .header{
@@ -71,8 +80,6 @@ border-spacing: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 80px;
-    padding-right: 80px;
     padding-top: 24px;
     padding-bottom: 24px;
     gap: 40px;
@@ -93,7 +100,7 @@ border-spacing: 0;
 .banner{
     display:  flex;
     background: #FBFBFB;
-    max-width: 100%;
+    max-width: 1920px;
     margin: 0 auto;
     border-top: solid 1px #6C757D;
     border-bottom: solid 1px #6C757D;
@@ -126,13 +133,13 @@ time{
     font-size: 16px;
     line-height: 150%;
     font-weight: 500;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
 }
 
 .tag{
     display: flex;
     align-items: center;
-    height: 36px;
+    height: auto;
 }
 
 .banner h3{
@@ -140,7 +147,7 @@ time{
     font-size: 24px;
     line-height: 150%;
     font-weight: 500;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
 }
 
 .tag span{
@@ -153,7 +160,7 @@ time{
     color: white;
     font-size: 16px;
     border-radius: 40px;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
 }
 
 h1{
@@ -161,7 +168,7 @@ h1{
     font-weight: 700;
     line-height: 150%;
     margin-top: 8px;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
   }
 
 .content{
@@ -176,7 +183,7 @@ h1{
 
 h2{
     color: #0027D5;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
     font-size: 28px;
     font-weight: 700;
     margin-bottom: 24px;
@@ -186,7 +193,7 @@ p{
     font-size: 16px;
     line-height: 150%;
     font-weight: 500;  
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
 }
 
 .img1{
@@ -232,7 +239,7 @@ p{
 h4{
     font-size: 20px;
     font-weight: 700;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
     margin-bottom: 12px;
 }
 
@@ -244,14 +251,14 @@ li span{
     font-size: 16px;
     line-height: 150%;
     font-weight: 500;  
-    font-family: "Noto Sans TC";  
+    font-family: "Noto Sans TC", serif;
     list-style-position: inside;
 }
 
 .background{
     font-weight: 700;
     font-size: 16px;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
     padding: 24px;
     background-color: #EDEDED;
     max-width: 100%;
@@ -259,9 +266,14 @@ li span{
     margin-bottom: 24px;
 }
 
+.contact{
+    text-decoration: underline;
+}
+
 .botton{
     display: flex;
     justify-content: space-between;
+    padding-bottom: 80px;
 }
 
 .botton a{
@@ -269,12 +281,17 @@ li span{
     color: #4B4B4B;
     font-weight: 500;
     font-size: 16px;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
     padding: 8px 16px;
     border: solid 1px #6C757D;
     border-radius: 40px;
     margin-top: 24px;
 }
+.botton a:hover{
+    color: white;
+    background-color: #0027D5;
+}
+
 
 .footer{
     max-width: 1920px;
@@ -285,26 +302,30 @@ li span{
     justify-content: space-around;
     align-items: center;
     border-top: solid 1px #6C757D;
-    margin-top: 80px;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
-.footer p{
+.footer a{
     font-size: 32px;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
     font-weight: 500;
     color: black;
+}
+
+.footer a:hover{
+    color: #0027D5;
 }
 
 .social{
     display: flex;
     justify-content: space-between;
-    width: 236px;
+    align-items: center;
+    gap: 24px;
     height: auto;
-    gap: 10px;
 }
 
-.footer a{
-    text-decoration: none;
+.social a{
     color: #0027D5;
     font-weight: 500;
     display: block;
@@ -313,17 +334,15 @@ li span{
 }
 
 .copyright{
-    max-width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
     padding-top: 24px;
     padding-bottom: 24px;
     background: white;
-}
-
-.copyright p{
     font-size: 16px;
     color: black;
     text-align: center;
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans TC", serif;
     font-weight: 500;
 }
 
@@ -333,8 +352,8 @@ li span{
     display: block;
 }
 
-.header a:hover{
-    color: black;
+.header{
+    flex-wrap: wrap;
 }
 
 .banner{
@@ -346,8 +365,6 @@ li span{
 .banner-img{
     max-width: 100%;
     height: 375px;
-    background-size: cover;
-    background-position: center;
     margin-right: 0px;
 }
 
@@ -371,35 +388,13 @@ li span{
 .content{
     max-width: 375px;
     margin: 0 auto;
-    margin-top: 64px;
+    padding-top: 64px;
     padding-left: 12px;
     padding-right: 12px;
 }
 
-.area{
-    margin-bottom: 24px;
-}
-
-h2{
-    color: #0027D5;
-    font-family: "Noto Sans TC";
-    font-size: 28px;
-    font-weight: 700;
-    margin-bottom: 24px;
-    line-height: 150%;
-}
-
-p{
-    font-size: 16px;
-    line-height: 150%;
-    font-weight: 500;  
-    font-family: "Noto Sans TC";
-}
-
 .img1{
     background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/mobile/blog-content/content1.png?raw=true");
-    background-size: cover;
-    background-position: center;
     max-width: 351px;
     height: 320px;
     margin-top: 24px;
@@ -408,8 +403,6 @@ p{
 
 .img2{
     background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/mobile/blog-content/content2.png?raw=true");
-    background-size: cover;
-    background-position: center;
     max-width: 100%;
     height: 320px;
     margin-top: 24px;
@@ -418,8 +411,6 @@ p{
 
 .img3{
     background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/mobile/blog-content/content3.png?raw=true");
-    background-size: cover;
-    background-position: center;
     max-width: 100%;
     height: 320px;
     margin-top: 24px;
@@ -428,8 +419,6 @@ p{
 
 .img4{
     background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/mobile/blog-content/content4.png?raw=true");
-    background-size: cover;
-    background-position: center;
     max-width: 100%;
     height: 320px;
     margin-top: 24px;
@@ -442,7 +431,10 @@ p{
 
 .copyright{
     max-width: 100%;
-    margin-top: 64px;
 }   
+
+.botton{
+    flex-wrap: wrap;
+}
 
 }
