--- a/css/blog.css
+++ b/css/blog.css
@@ -56,7 +56,6 @@ border-spacing: 0;
 body{
     line-height: 150%;
     font-family: "Noto Sans TC", serif;
-    display: block;
 }
 
 a{
@@ -192,7 +191,7 @@ time{
 .tag{
     display: flex;
     align-items: center;
-    height: 36px;
+    height: auto;
 }
 
 h3{
@@ -266,6 +265,7 @@ p{
     max-width: 100%;
     height: auto;
     margin-bottom: 16px;
+    display: block;
 }
 
 .card a{
@@ -375,6 +375,8 @@ p{
     justify-content: space-around;
     align-items: center;
     border-top: solid 1px #6C757D;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .footer a{
@@ -410,9 +412,6 @@ p{
     padding-top: 24px;
     padding-bottom: 24px;
     background: white;
-}
-
-.copyright {
     font-size: 16px;
     color: black;
     text-align: center;
@@ -440,7 +439,7 @@ p{
 }
 
 .hero-img{
-    max-width: 375px;
+    max-width: 100%;
     height: 375px;
     background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/mobile/index/Hero%20Section.png?raw=true");
     background-size: cover;
@@ -449,7 +448,7 @@ p{
 }
 
 .hero-content{
-    max-width: 375px;
+    max-width: 100%;
     height: auto;
     padding-left: 24px;
     padding-top:24px;
