--- a/css/detail.css
+++ b/css/detail.css
@@ -140,6 +140,7 @@ time{
     display: flex;
     align-items: center;
     height: auto;
+    flex-wrap: wrap;
 }
 
 .banner h3{
@@ -353,7 +354,10 @@ li span{
 }
 
 .header{
+    max-width: 375px; 
+    height: auto;
     flex-wrap: wrap;
+    line-height: 150%;
 }
 
 .banner{
@@ -392,7 +396,9 @@ li span{
     padding-left: 12px;
     padding-right: 12px;
 }
-
+h2{
+    line-height: 150%;
+}
 .img1{
     background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/mobile/blog-content/content1.png?raw=true");
     max-width: 351px;
